--- a/themes/uoc/layouts/partials/detail_difusio.html
+++ b/themes/uoc/layouts/partials/detail_difusio.html
@@ -23,7 +23,7 @@
         <div class="col-xs-12 col-md-9">
             {{if eq $type "noticies"}}
             <figure class="img-figure">
-                <img src={{with .Params.general.img}}{{.}}{{end}}>
+                <img src="{{with .Params.general.img}}{{.}}{{end}}" alt="{{ T "uoc_ri_difusio_noticia"}} img">
                 <figcaption class="img-figcaption">
                     <div class="float-left" id="img-figcaption1">
                         <em class="text-extra-small">Foto: {{with .Params.general.img_autor}}{{.}}{{end}}</em>
@@ -84,9 +84,9 @@
                     <div>
                         <div class="card card--image-horizontal card--info col-xs-12 card--2y col-clear-right">
                         <div class="card__contents col-xs-12 col-md-4">
-                            <h3 class="h4 ">{{ T "uoc_ri_esdeveniment_On" }}</h3>
+                            <h2 class="h4"><strong>{{ T "uoc_ri_esdeveniment_On" }}</strong></h2>
                             <p>{{with .Params.general.lloc}}{{.}}{{end}}</p>
-                            <h3 class="h4 clear-both">{{ T "uoc_ri_esdeveniment_Quan" }}</h3>
+                            <h2 class="h4 clear-both"><strong>{{ T "uoc_ri_esdeveniment_Quan" }}</strong></h2>
                             <p>
                             {{with .Params.date}}{{dateFormat "02/01/2006 15:04" .}}{{end}}
                             <p>
